syntax = "proto3";

package srp;

message ControlServerOption{
  string host = 1;
  int32 port = 2;
}